deploy: 9030cdd72520802e2699b6abfe03c942cb97ebb2

--- a/index.html
+++ b/index.html
@@ -1247,10 +1247,13 @@ To reference a defined quality profile from another part of your YAML (e.g., pri
 
 <p>The <code>default</code> quality profile is <strong>mandatory</strong> whenever the <code>dataQuality</code> object is used. It acts as the <strong>baseline</strong> definition, ensuring there is always a clear and predictable quality configuration, even when no referencing is used.</p>
 
-<p>You should use the <code>default</code> profile when:
-- You want to describe core quality expectations for the product.
-- You don’t yet need pricing or SLA-specific variations.
-- You want to ensure future compatibility with advanced features such as AI agents, data marketplaces, or automated governance.</p>
+<p>You should use the <code>default</code> profile when:</p>
+
+<ul>
+<li>You want to describe core quality expectations for the product.</li>
+<li>You don’t yet need pricing or SLA-specific variations.</li>
+<li>You want to ensure future compatibility with advanced features such as AI agents, data marketplaces, or automated governance.</li>
+</ul>
 
 <p>This makes the <code>default</code> profile both a <strong>minimum requirement</strong> and a <strong>best practice</strong> for clarity and interoperability.</p>
 
