deploy: 599140c1d94fe0b1c79e3b8df158a9267d4e211d

--- a/index.html
+++ b/index.html
@@ -1934,6 +1934,12 @@ any industry specific needs. </p>
 <td>Binds the licensing related elements and attributes together.</td>
 </tr>
 <tr>
+<td><strong>URL</strong></td>
+<td>URL</td>
+<td>Valid URL</td>
+<td>Points to the license text. You can use this or then the other approach to define elements of the license with below given elements and attributes</td>
+</tr>
+<tr>
 <td><strong>en</strong></td>
 <td>attribute</td>
 <td><a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">ISO 639-1</a> defined 2-letter codes</td>
