--- a/index.html
+++ b/index.html
@@ -339,6 +339,9 @@
                     <a href="#4-0-release-candidate-version" class="toc-h2 toc-link" data-title="4.0 Release Candidate Version">4.0 Release Candidate Version</a>
                   </li>
                   <li>
+                    <a href="#examples" class="toc-h2 toc-link" data-title="Examples">Examples</a>
+                  </li>
+                  <li>
                     <a href="#introduction" class="toc-h2 toc-link" data-title="Introduction">Introduction</a>
                   </li>
                   <li>
@@ -490,6 +493,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <ul>
 <li><a href="https://github.com/Open-Data-Product-Initiative/4rc/issues">Raise an issue in Github</a></li>
 </ul>
+<h2 id='examples'>Examples</h2>
+<p>We provide some <a href="https://github.com/Open-Data-Product-Initiative/odps-examples">examples of ODPS spec files in Github</a>. We appreciate contributions to this collection. </p>
 <h2 id='introduction'>Introduction</h2>
 <p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="http://www.opendataproducts.org">Open Data Product Specification homepage</a>. </p>
 
