--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>ODPS YAML Schema:</strong></p>
 
 <ul>
-<li><a href="https://opendataproducts.org/dev/schema/odps.yaml">YAML Schema</a></li>
+<li><a href="https://opendataproducts.org/v4.0/schema/odps.yaml">YAML Schema</a></li>
 </ul>
 
 <p><strong>Editors:</strong></p>
