--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,12 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Binds the SLA-related elements and attributes together.</td>
 </tr>
 <tr>
+<td><strong>$ref</strong></td>
+<td>filepath or valid URL</td>
+<td>-</td>
+<td>Define the SLA in external file for reuse purposes, example  $ref: &#39;https://example.org/slas/all-packages.yaml&#39; The same pattern can be used in individual SLA profiles instead of doing it inline like in the example.</td>
+</tr>
+<tr>
 <td><strong>default</strong></td>
 <td>object</td>
 <td>-</td>
