deploy: 0a654cd3f552941e517fdb76d922965b66269b28

--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>$ref</strong></td>
 <td>filepath or valid URL</td>
 <td>-</td>
-<td>Define the SLA in external file for reuse purposes, example  $ref: &#39;https://example.org/slas/all-packages.yaml&#39; See example. <br/>The same pattern can be used in individual SLA profiles instead of doing it inline. See example.</td>
+<td>Define the SLA in external file for reuse purposes, example  $ref: &#39;https://example.org/slas/all-packages.yaml&#39; See example. <br/><br/>The same pattern can be used in individual SLA profiles instead of doing it inline. See example.</td>
 </tr>
 <tr>
 <td><strong>default</strong></td>
