--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>$ref</strong></td>
 <td>filepath or valid URL</td>
 <td>-</td>
-<td>Define the SLA in external file for reuse purposes, example  $ref: &#39;https://example.org/slas/all-packages.yaml&#39; See example. This makes it easy to keep related profiles (e.g. default, premium, gold) together, apply versioning and validation once, and publish all variants from a single repo or source. <br/><br/>The same pattern can be used in individual SLA profiles instead of doing it inline. See example. This gives finer control if each SLA is owned or updated by a different team, but increases the number of files to track and host.</td>
+<td>Define the SLA in external file for reuse purposes, example  <code>$ref: &#39;https://example.org/slas/all-packages.yaml&#39;</code> See example. This makes it easy to keep related profiles (e.g. default, premium, gold) together, apply versioning and validation once, and publish all variants from a single repo or source. <br/><br/>The same pattern can be used in individual SLA profiles instead of doing it inline. See example. This gives finer control if each SLA is owned or updated by a different team, but increases the number of files to track and host.</td>
 </tr>
 <tr>
 <td><strong>default</strong></td>
