deploy: 731b0488a2a86eab1ff9d1fc0d29a07161a534a4

--- a/index.html
+++ b/index.html
@@ -2132,7 +2132,7 @@ any industry specific needs. </p>
 
 <p>Including an AI agent-specific access interface (<code>outputPorttype: AI</code>) supports MCP-based agent interactions, aligning your product with <strong>AI-native data delivery patterns</strong>.</p>
 <h4 id='referencing-examples'>Referencing Examples</h4>
-<p>For example in your <code>access</code> section in Pricing, you can reuse any defined method from <code>dataAccess</code> like this: <em>$ref: &#39;#/dataAccess/default&#39;</em></p>
+<p>For example in your <code>access</code> section in Pricing, you can reuse any defined method from <code>dataAccess</code> like this: <em>$ref: &#39;#/Product/dataAccess/default&#39;</em></p>
 <h2 id='optional-attributes-and-elements'>Optional attributes and elements</h2>
 <blockquote>
 <p>Example of Data Access object usage:</p>
