--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <p><strong>The ODPS 4.0 specification supports referencing mechanisms</strong> that improve modularity, reduce duplication, and ease governance. Users can reference internal components, such as SLA, dataQuality, dataAccess, and paymentGateways, from other parts of the product definition using JSON Reference syntax ($ref). In addition, any of these components can be defined and maintained in external YAML files and included via URL-based references. This makes it possible to reuse standardized SLA profiles, DQ rules, or access definitions across multiple data products, helping teams manage changes consistently, reduce errors, and align with enterprise-level governance practices.</p>
 
-<p>This version Data Contract support has been added to Open Data Product Specification. You can reference Data Contract as a URL or define Data Contract as an inline element in ODPS. Both Data Contract Specification (DCS) and Open Data Contract Standard (ODCS) supported. </p>
+<p>You can reference Data Contract as a URL or define Data Contract as an inline element in ODPS. Both Data Contract Specification (DCS) and Open Data Contract Standard (ODCS) supported. </p>
 <h2 id='specification-aims-and-aspects'>Specification aims and aspects</h2>
 <p><strong>Specification aims:</strong></p>
 
