deploy: 6500aaadf0e1bfcf5eb03f2013818b9aa8b6641e

--- a/index.html
+++ b/index.html
@@ -1562,7 +1562,7 @@ any industry specific needs. </p>
 
 <p>The Pricing object is general in nature and should be enough for common (80%) use cases. You can make extensions to the standard with &quot;x-&quot; mechanism in order to fulfill any industry specific needs. The <a href="#specification-extensions">&quot;Specification extensions&quot;</a> section provides details on how to use this feature. </p>
 
-<p><strong>This version introduces the &quot;Pricing Plans as Code&quot; feature.</strong> You can define the necessary actions (CRUP) to set up and use the selected payment gateway, initiating the purchase process. <strong>CRUP</strong> stands for: </p>
+<p><strong>Includes the &quot;Pricing Plans as Code&quot; feature.</strong> You can define the necessary actions (CRUP) to set up and use the selected payment gateway, initiating the purchase process. <strong>CRUP</strong> stands for: </p>
 
 <ul>
 <li><strong>C</strong>reate (create pricing plan), </li>
