deploy: c7c89b0ff87c232c566743afffcc94a67912e593

--- a/index.html
+++ b/index.html
@@ -1991,10 +1991,10 @@ any industry specific needs. </p>
 <td>Binds the licensing related elements and attributes together.</td>
 </tr>
 <tr>
-<td><strong>URL</strong></td>
-<td>URL</td>
-<td>Valid URL</td>
-<td>Points to the license text. You can use this or then the other approach to define elements of the license with below given elements and attributes</td>
+<td><strong>$ref</strong></td>
+<td>URI</td>
+<td>Valid URI</td>
+<td>Points to the license text, local file or online. You can use this or then the other approach to define elements of the license with below given elements and attributes</td>
 </tr>
 <tr>
 <td><strong>en</strong></td>
