deploy: de027df0978ff6f3bbf20785c1c55ba48afcf719

--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <tr>
 <td><strong>unit</strong></td>
 <td>attribute</td>
-<td>Options: milliseconds, seconds, minutes, days, weeks, months, years, never, date, null</td>
+<td>Options: percent, milliseconds, seconds, minutes, days, weeks, months, years, never, date, null</td>
 <td>Measurement unit for the SLA objective. If &quot;date&quot; is used, format should be dd/mm/yyyy.</td>
 </tr>
 <tr>
