deploy: 56df6d52e8f14cfeac046b0d7a11ae79e8d5db83

--- a/index.html
+++ b/index.html
@@ -687,10 +687,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
       <span class="pi">-</span> <span class="s">PDF</span>
       <span class="na">useCases</span><span class="pi">:</span>
       <span class="pi">-</span> <span class="na">useCase</span><span class="pi">:</span>
-          <span class="na">useCaseTitle</span><span class="pi">:</span> 
-            <span class="na">en</span><span class="pi">:</span> <span class="s">Build attractive and lucrative petstore!</span>
-          <span class="na">useCaseDescription</span><span class="pi">:</span> 
-            <span class="na">en</span><span class="pi">:</span> <span class="s">Use case description how succesfull petstore chain was established in Abu Dhabi</span>
+          <span class="na">useCaseTitle</span><span class="pi">:</span> <span class="s">Build attractive and lucrative petstore!</span>
+          <span class="na">useCaseDescription</span><span class="pi">:</span> <span class="s">Use case description how succesfull petstore chain was established in Abu Dhabi</span>
           <span class="na">useCaseURL</span><span class="pi">:</span> <span class="s">https://marketplace.com/usecase1</span>
       <span class="na">recommendedDataProducts</span><span class="pi">:</span>
       <span class="pi">-</span> <span class="s">https://marketplace.com/dataproduct.json</span>
