--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <a href="#4-0-release-candidate-version" class="toc-h2 toc-link" data-title="4.0 Release Candidate Version">4.0 Release Candidate Version</a>
                   </li>
                   <li>
-                    <a href="#examples" class="toc-h2 toc-link" data-title="Examples">Examples</a>
+                    <a href="#howto-odps-knowledge-base" class="toc-h2 toc-link" data-title="HowTo - ODPS Knowledge Base">HowTo - ODPS Knowledge Base</a>
                   </li>
                   <li>
                     <a href="#introduction" class="toc-h2 toc-link" data-title="Introduction">Introduction</a>
@@ -493,12 +493,12 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <ul>
 <li><a href="https://github.com/Open-Data-Product-Initiative/4rc/issues">Raise an issue in Github</a></li>
 </ul>
-<h2 id='examples'>Examples</h2>
+<h2 id='howto-odps-knowledge-base'>HowTo - ODPS Knowledge Base</h2>
 <p>The odps‑examples repository serves as a comprehensive knowledge base for using the Open Data Product Specification (ODPS), combining clear FAQs with real-world YAML examples to guide users through practical implementation. Each FAQ entry tackles a specific task—like defining metadata, setting pricing tiers, assigning SLAs, configuring data quality rules, managing access roles, or enabling AI/agent consumption—accompanied by executable YAML snippets and full .yml files. </p>
 
 <p>The content is modular, code‑first, and designed for easy reuse, enabling teams to discover, govern, monetize, validate, and automate data products using standardized, machine-readable metadata. Users are encouraged to contribute new scenarios or enhancements via GitHub issues.</p>
 
-<p><a href="https://github.com/Open-Data-Product-Initiative/odps-examples">Examples of ODPS spec files in Github</a>. </p>
+<p><a href="https://github.com/Open-Data-Product-Initiative/odps-examples">Knowledge Base in Github</a>. </p>
 <h2 id='introduction'>Introduction</h2>
 <p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="http://www.opendataproducts.org">Open Data Product Specification homepage</a>. </p>
 
